[package]
name = "tdigest"
repository = "https://github.com/MnO2/t-digest"
version = "0.2.1"
license = "Apache-2.0"
description = "T-Digest algorithm in Rust"
authors = ["Paul Meng <me@paulme.ng>"]
readme = "README.md"
keywords = ["tdigest", "percentile", "statistics"]
edition = "2018"
exclude = ["/benches/**", "/.travis.yml"]

[badges]
travis-ci = { repository = "MnO2/t-digest" }
codecov = { repository = "MnO2/t-digest" }

[dependencies]
ordered-float = "1.0"
serde = { package = "serde", version = "1.0", optional = true, default-features = false }

[features]
use_serde = ["serde", "serde/derive", "ordered-float/serde"]
